Adaptation des classes pour l'ajout du nouvel ordre 'Podiatre'
- Mise à jour des validateurs pour inclure les conditions spécifiques au nouvel ordre 'Podiatre'.
- Ajout des ajustements nécessaires dans les classes liées aux règles générales, aux heures totales, et à la validation par catégorie.
- Adaptation des tests unitaires pour prendre en charge les changements liés au nouvel ordre.